#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9954 released.

        * More changes to Makefile.PL to correct
          issues.


2011-08-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9953 released.

        * More changes to Makefile.PL to correct
          editor choice sed syntax.


2011-08-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9952 released.

        * More changes to Makefile.PL to correct
          editor choice.


2011-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9951 released.

        * More changes to Makefile.PL.


2011-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9950 released.

        * Fixed BerkeleyDB code to work with latest 5.2
          release.

        * Better handling for top script indicated menu_config.


2011-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9949 released.

        * Added robust code to install and FA_Core.pm to
          locate BerkeleyDB db_recover utility.


2011-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9948 released.

        * Fixed Ticket ID #69659 - added message explaining
          Cygwin requirement for MS Windows and exiting.

        * Fixed Ticket ID #69661 - added exit for CPAN smoke
          testers to stop FullAuto install if modules installed
          by Makefile.PL are needed.


2011-07-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9947 released.
