@@ -45,6 +45,14 @@
 ################################################################
 
 
+2011-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9955 released.
+
+        * More changes to Makefile.PL to correct
+          small regex issue for Win XP.
+
+
 2011-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9954 released.
